; ModuleID = '/home/carl/AnghaBench/disque/src/extr_config.c_rewriteConfigNumericalOption.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_config.c_rewriteConfigNumericalOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rewriteConfigState = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"%s %lld\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigNumericalOption(%struct.rewriteConfigState* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.rewriteConfigState*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = icmp ne i64 %11, %12
  %14 = zext i1 %13 to i32
  store i32 %14, i32* %9, align 4
  %15 = call i32 (...) @sdsempty()
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @sdscatprintf(i32 %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %16, i64 %17)
  store i32 %18, i32* %10, align 4
  %19 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState* %19, i8* %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @sdscatprintf(i32, i8*, i8*, i64) #1

declare dso_local i32 @sdsempty(...) #1

declare dso_local i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
